desysflow/answer-my-dms-tts/v1/TECHNICAL_REPORT.md
# TECHNICAL REPORT

## Executive Summary
Prompt-driven workflow executed for role `Platform Engineer` and produced architecture artifacts for version `v1`.

## Document Control
- Project: `answer-my-dms-tts`
- Version: `v1`
- Role: `Platform Engineer`
- Style: `balanced`
- Cloud target: `aws`

## Sub-agent Topology
- Extractor -> template selector -> architecture generator -> edge-case injector -> primary selector.
- Diagram pipeline -> quality refinement.
- Report generator -> cloud infrastructure mapping.

## Parallel Execution Plan
- Repository context build runs in parallel (inventory, stack, modules, references).
- Document packaging runs in parallel where possible for markdown outputs.

## Internal Reviewer Loop
- Required-section validation and wording normalization pass.
- Mermaid prefix/shape validation pass.

## Context Bloat Fixes
- Representative files capped to `TOP_FILE_LIMIT=60`.
- Outputs versioned per run to keep diffs small and traceable.

## Repository Grounding
- Files scanned for symbols: 10
- Files with extracted symbols: 7
- Representative symbol-bearing files:
  - `src/answer_my_dms_tts/kb_manager.py` (python) | classes=KBError | functions=_base_url, _headers, list_knowledge_bases, create_knowledge_base, get_knowledge_base
  - `src/answer_my_dms_tts/dm_agent.py` (python) | classes=DMReplyAgent | functions=_load_kb_context, generate_dm_reply, generate_dm_reply_sync | methods=DMReplyAgent[__init__, generate_response]
  - `src/answer_my_dms_tts/config.py` (python) | classes=Settings | functions=_none_if_blank, load_settings
  - `src/answer_my_dms_tts/tts.py` (python) | classes=TTSError | functions=_auth_headers, synthesize_speech
  - `src/answer_my_dms_tts/app.py` (python) | functions=render_speech_button, clean_tts_text, render_app
  - `src/answer_my_dms_tts/main.py` (python) | functions=on_start, run
  - `src/answer_my_dms_tts/prompts.py` (python) | functions=build_system_prompt

## Session Management and Memory
- Session and run metadata stored in local SQLite.
- Generated docs stored in versioned filesystem folders.

## Requirements Baseline
- traffic_estimate: 100k DAU
- latency_requirement: <200ms p99
- consistency_requirement: eventual
- budget_constraint: moderate
- region: us-east-1
- scale_growth_projection: 2x in 12 months
- critical_features: ['API boundaries', 'data flow', 'scaling', 'availability', 'security']

## Architecture Signals
- HLD components generated: 12
- LLD API endpoints generated: 5
- Cloud target: `aws`
- Language target: `Python`

## Quality and Risks
- Primary quality focus: maintainability, reliability, and observability.
- Delivery risk: requirement ambiguity when prompt details are sparse.
- Operational risk: dependency bottlenecks without capacity validation in runtime environment.

## Prompt Context
```text
Role: Platform Engineer
Project: answer-my-dms-tts
Preferred implementation language: Python
Cloud target: aws
Design style: balanced
Reference paths: main.py, pyproject.toml, README.md
Observed codebase structure:
- Files scanned for symbols: 10
- Files with extracted symbols: 7
- Representative symbol-bearing files:
  - `src/answer_my_dms_tts/kb_manager.py` (python) | classes=KBError | functions=_base_url, _headers, list_knowledge_bases, create_knowledge_base, get_knowledge_base
  - `src/answer_my_dms_tts/dm_agent.py` (python) | classes=DMReplyAgent | functions=_load_kb_context, generate_dm_reply, generate_dm_reply_sync | methods=DMReplyAgent[__init__, generate_response]
  - `src/answer_my_dms_tts/config.py` (python) | classes=Settings | functions=_none_if_blank, load_settings
  - `src/answer_my_dms_tts/tts.py` (python) | classes=TTSError | functions=_auth_headers, synthesize_speech
  - `src/answer_my_dms_tts/app.py` (python) | functions=render_speech_button, clean_tts_text, render_app
  - `src/answer_my_dms_tts/main.py` (python) | functions=on_start, run
  - `src/answer_my_dms_tts/prompts.py` (python) | functions=build_system_prompt
Design request: Create a production-grade architecture for the current codebase, including API boundaries, data flow, scaling, availability, and security.
```

## External References
- [text to speech - How to use api based TTS service (Murf, Wellsaid etc) with Amazon Connect? - Stack Overflow](https://stackoverflow.com/questions/76624758/how-to-use-api-based-tts-service-murf-wellsaid-etc-with-amazon-connect) - You can only use the inbuilt TTS in connect to do TTS directly.
- [Text-To-Speech With AWS (Part 1) — Smashing Magazine](https://www.smashingmagazine.com/2019/08/text-to-speech-aws/) - aws polly synthesize-speech \ --output-format mp3 \ --voice-id Joanna \ --text "`cat sonnetxxix.txt`" \ poem.mp3 · In a few seconds, the resulting .mp3 file was
- [Amazon Polly: A Complete Guide to Text-to-Speech in AWS | DataCamp](https://www.datacamp.com/tutorial/amazon-polly) - March 8, 2025 -Your complete guide to learning AWS, whether starting fresh or building on existing knowledge. Discover a step-by-step roadmap along with several
- [AI Voice Generator and Text-to-Speech Tool - Amazon Polly - AWS](https://aws.amazon.com/polly/) - 1 week ago -Amazon Polly offers 100+ male and female voices in 40+ language and language variants. AWS is constantly updating and adding to our voice capabiliti
- [Text to speech: AWS Polly. Text-to-Speech (TTS) technology… | by Tejas Gupta | Medium](https://medium.com/@2017tejasgupta/text-to-speech-aws-polly-a0533112a7aa) - January 14, 2023 -TTS technology has a wide range ... virtual assistants, and other conversational AI systems. ...AWS has a managed Text-to-Speech service named

## Future Improvements
- Add automated architecture quality scoring across reliability, cost, and security dimensions.
- Add benchmark-derived capacity guidance for common traffic tiers.
- Add deeper refine-mode context stitching with prior version deltas.
